--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:name=".LoginRegistration.LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".LoginRegistration.LoginSignupActivity"
+            android:exported="false" />
+        <activity
             android:name=".Main.Main"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
