--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.tara">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="false"
@@ -49,13 +51,13 @@
             android:name=".Host.HostCar"
             android:exported="false" />
         <activity
-            android:name=".LoginRegistration.SignupActivity"
+            android:name=".LoginSignup.SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginRegistration.LoginActivity"
+            android:name=".LoginSignup.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginRegistration.GetStarted"
+            android:name=".LoginSignup.GetStarted"
             android:exported="false" />
         <activity
             android:name=".Main.Main"
