--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TARA">
         <activity
+            android:name=".Profile.EditProfilePicture"
+            android:exported="false" />
+        <activity
             android:name=".Bookings.BookDetails"
             android:exported="false" />
         <activity
